@startuml

interface Item {
- title: str
- minutes: int
+ calc_fee(days: int) -> int
}

class Video {
calc_fee(days: int) -> int
}

class DVD {
calc_fee(days: int) -> int
}

class CD {
+ calc_fee(days: int) -> int
}

class JapaneseCD {
+ calc_fee(days: int) -> int
}

class ImportCD {
calc_fee(days: int) -> int
}

Item <|-- CD
Item <|-- Video
Item <|-- DVD
CD <|-- JapaneseCD
CD <|-- ImportCD


@enduml
